--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
-    "nuxt3": "latest"
-  }
+    "nuxt3": "latest",
+    "sass": "^1.43.4"
+  },
+  "dependencies": {}
 }
